--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "intervention/image": "^3.6",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
-        "srmklive/paypal": "~3.0"
+        "srmklive/paypal": "~3.0",
+        "stripe/stripe-php": "^14.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
